chrome/browser/extensions/api/settings_private/generated_prefs_factory.h
@@ -30,6 +30,9 @@ class GeneratedPrefsFactory : public BrowserContextKeyedServiceFactory {
   ~GeneratedPrefsFactory() override;
 
   // BrowserContextKeyedServiceFactory implementation.
+  content::BrowserContext* GetBrowserContextToUse(
+      content::BrowserContext* context) const override;
+  bool ServiceIsNULLWhileTesting() const override;
   KeyedService* BuildServiceInstanceFor(
       content::BrowserContext* profile) const override;
 
