chrome/browser/extensions/api/settings_private/settings_private_api.cc
@@ -18,10 +18,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/common/page_zoom.h"
 #include "extensions/browser/extension_function_registry.h"
 
-namespace {
-  const char kDelegateIsNull[] = "delegate is null";
-}
-
 namespace extensions {
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -38,8 +34,7 @@ ExtensionFunction::ResponseAction SettingsPrivateSetPrefFunction::Run() {
 
   SettingsPrivateDelegate* delegate =
       SettingsPrivateDelegateFactory::GetForBrowserContext(browser_context());
-  if (delegate == nullptr)
-    return RespondNow(Error(kDelegateIsNull));
+  DCHECK(delegate);
 
   settings_private::SetPrefResult result =
       delegate->SetPref(parameters->name, parameters->value.get());
@@ -72,11 +67,8 @@ SettingsPrivateGetAllPrefsFunction::~SettingsPrivateGetAllPrefsFunction() {
 ExtensionFunction::ResponseAction SettingsPrivateGetAllPrefsFunction::Run() {
   SettingsPrivateDelegate* delegate =
       SettingsPrivateDelegateFactory::GetForBrowserContext(browser_context());
-
-  if (delegate == nullptr)
-    return RespondNow(Error(kDelegateIsNull));
-  else
-    return RespondNow(OneArgument(delegate->GetAllPrefs()));
+  DCHECK(delegate);
+  return RespondNow(OneArgument(delegate->GetAllPrefs()));
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -93,8 +85,7 @@ ExtensionFunction::ResponseAction SettingsPrivateGetPrefFunction::Run() {
 
   SettingsPrivateDelegate* delegate =
       SettingsPrivateDelegateFactory::GetForBrowserContext(browser_context());
-  if (delegate == nullptr)
-    return RespondNow(Error(kDelegateIsNull));
+  DCHECK(delegate);
 
   std::unique_ptr<base::Value> value = delegate->GetPref(parameters->name);
   if (value->is_none())
@@ -115,11 +106,8 @@ ExtensionFunction::ResponseAction
     SettingsPrivateGetDefaultZoomFunction::Run() {
   SettingsPrivateDelegate* delegate =
       SettingsPrivateDelegateFactory::GetForBrowserContext(browser_context());
-
-  if (delegate == nullptr)
-    return RespondNow(Error(kDelegateIsNull));
-  else
-    return RespondNow(OneArgument(delegate->GetDefaultZoom()));
+  DCHECK(delegate);
+  return RespondNow(OneArgument(delegate->GetDefaultZoom()));
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -138,9 +126,7 @@ ExtensionFunction::ResponseAction
 
   SettingsPrivateDelegate* delegate =
       SettingsPrivateDelegateFactory::GetForBrowserContext(browser_context());
-  if (delegate == nullptr)
-    return RespondNow(Error(kDelegateIsNull));
-
+  DCHECK(delegate);
   delegate->SetDefaultZoom(parameters->zoom);
   return RespondNow(OneArgument(std::make_unique<base::Value>(true)));
 }
