chrome/browser/extensions/api/settings_private/settings_private_event_router_factory.cc
@@ -45,7 +45,8 @@ KeyedService* SettingsPrivateEventRouterFactory::BuildServiceInstanceFor(
 content::BrowserContext*
 SettingsPrivateEventRouterFactory::GetBrowserContextToUse(
     content::BrowserContext* context) const {
-  return ExtensionsBrowserClient::Get()->GetOriginalContext(context);
+  // Use the incognito profile in guest mode.
+  return context;
 }
 
 bool SettingsPrivateEventRouterFactory::ServiceIsCreatedWithBrowserContext()
@@ -54,7 +55,7 @@ bool SettingsPrivateEventRouterFactory::ServiceIsCreatedWithBrowserContext()
 }
 
 bool SettingsPrivateEventRouterFactory::ServiceIsNULLWhileTesting() const {
-  return false;
+  return true;
 }
 
 }  // namespace extensions
